--- a/pages/SkillsJobs.html
+++ b/pages/SkillsJobs.html
@@ -69,14 +69,15 @@ We would be looking for a couple of years of experience, working in a team follo
       <br />
       <h3>About You</h3>
       <ul>
-        <li>A minimum of a bachelor's degree in computer science or equivalent. </li>
-        <li>Possess a keen eye regarding a high level of detail and strive for pixel-perfect design across different web browsers and platforms  </li>
-        <li>Expert proficiency with front end web technologies such as HTML / CSS / Javascript  </li>
-        <li>A solid understanding of web design, accessibility, usability, search engine optimisation and information architecture  </li>
-        <li>PHP / MySQL Back end development </li>
-        <li>Frameworks such as AngluarJs or Angular </li>
-        <li>Understanding of cloud deployments with Docker and AWS  </li>
-        <li>Git version control (Github, Bitbucket etc) </li>
+        <li>3 to 5 years' experience in test engineering with a good background in development methodology such as Scrum or Agile </li>
+        <li>Ability to identify and capture test cases, trace test results to quality risk </li>
+        <li>Great analytical Skills </li>
+        <li>Basic understanding of programming concepts  </li>
+        <li>Superb time management skills and the ability to stick to deadlines </li>
+        <li>Exposure to Automation and API testing. </li>
+        <li>Good understanding and experience of testing processes, practices and technologies across the entire software life cycle </li>
+        <li>Effective at user story interpretation and converting requirements into relevant and specific test cases </li>
+        <li>Excellent technical, written, and verbal interpersonal communication skills, with a positive attitude and enthusiasm for continuous improvement </li>
     </div>
     <!-- For Back End -->
     <div id="Back" class="tabcontent">
@@ -96,19 +97,24 @@ We would be looking for a couple of years of experience, working in a team follo
     <div id="Test" class="tabcontent">
       <span onclick="this.parentElement.style.display='none'" class="topright"></span>
       <h2></h2>
-      <p>We require a test engineer to work closely with software developers and program managers to iron out any bugs in the product, and improve the quality of the finished product. In order to ensure that the product is successful, a test engineer will ensure that the product actually works.  They will be able to develop automated test scenarios to ensure that as changes are made they can be tested against standard use cases, giving piece of mind that something else has not been broken somewhere along the line.  They will be able to test the API's built by the back end developer ensuring that they return appropriate results so the Front  end developer can focus on the front end know his/her source data is correct. </p>
+      <p>Creative Protocol are currently looking to aquire a test engineer to work closely in our small team along with software developers and program managers to iron out any bugs in the product, and improve the quality of the finished product. To be successful in this role you will need to to ensure that the product is successful and that our product actually works as intended. You will be required and be able to develop automated test scenarios to ensure that as changes are made they can be tested against standard use cases. This will allow piece of mind that something else has not been broken somewhere along the line. You will be responsible for testing the API's built by the back end developer ensuring that they return appropriate results so the Front end developer can focus on the front end knowing his/her source data is correct. </p>
       <br />
-      <h3>Skills Required</h3>
+      <h3>Summary of Responsibilities</h3>
       <ul>
-        <li>Ability to identify and capture test cases, trace test results to qualityrisk</li>
-        <li>Analytical Skills</li>
-        <li>Basic understanding of programming concepts</li>
-        <li>Ability to work in a team</li>
-        <li>Ability to stick to deadlines</li>
+        <li>Execution of the agreed project test strategy</li>
+        <li>Taking business and technical requirements and applying a “tester” mindset and skills to build quality through the life cycle</li>
+        <li>Proactive analysis, design and execution of effective test suites within the context of the sprint, includes manual and automation testing</li>
+        <li>Testing front and back end systems using a combination of web services, test harnesses and custom test tools</li>
+        <li>Strong exploratory and scenario testing</li>
       </ul>
       <br />
-      <h3>Qualifications Required</h3>
-      <p>We are looking for someone with 3 to 5 years' experience in test engineering, who can work well with a team, following a consisted development methodology such as Scrum or Agile.   </p>
+      <h3>About You</h3>
+      <ul>
+      <li>Execution of the agreed project test strategy</li>
+        <li>Taking business and technical requirements and applying a “tester” mindset and skills to build quality through the life cycle</li>
+        <li>Proactive analysis, design and execution of effective test suites within the context of the sprint, includes manual and automation testing</li>
+        <li>Testing front and back end systems using a combination of web services, test harnesses and custom test tools</li>
+        <li>Strong exploratory and scenario testing</li>
     </div>
     <!-- For Dev Ops -->
     <div id="Dev" class="tabcontent">
