--- a/pages/SkillsJobs.html
+++ b/pages/SkillsJobs.html
@@ -78,20 +78,37 @@ We would be looking for a couple of years of experience, working in a team follo
         <li>Good understanding and experience of testing processes, practices and technologies across the entire software life cycle </li>
         <li>Effective at user story interpretation and converting requirements into relevant and specific test cases </li>
         <li>Excellent technical, written, and verbal interpersonal communication skills, with a positive attitude and enthusiasm for continuous improvement </li>
+        </ul>
     </div>
     <!-- For Back End -->
     <div id="Back" class="tabcontent">
       <span onclick="this.parentElement.style.display='none'" class="topright"></span>
-      <h2></h2>
+      <h2>Creative Protocol are seeking a Back End Application Developer that has the ability to understand the software development life cycle and leverage a variety of technologies to produce quality software. The role primarily revolves around looking after the communications between the client’s devices and logging the RRD information on the central server. You will also require the ability to to build an API that our Front End Developer can utilise in order to retrieve information for the display. Previous experience in developing REST based API’s with a good understanding of secure web communication protocols will be highly considered. We strive to create an amazing user experience so we place a strong emphasis on our design process. You will be given the opportunity to work with with our team internally and also be responsible for external clients on software design challenges. This is an excellent opportunity to be part of a team with a culture of continuous improvement regarding our technologies and practices.</h2>
       <p></p>
       <br />
-      <h3>Skills Required</h3>
+      <h3>Summary of Responsibilities</h3>
       <ul>
-        <li></li>
-      </ul>
+        <li>Solving problems using logic and methodical testing processes</li>
+        <li>Produce high-quality secure code in accordance with our standards. </li>
+        <li>Write and maintain automated tests for code where applicable. </li>
+        <li>Document code consistently throughout the development process. </li>
+        <li>Deliver bug-free code to meet the defined KPIs for software quality and performance. </li>
+        <li>Manage your workload to meet agreed time frames. </li>
+        <li>Test new programs to ensure that logic and syntax are correct. </li>
+        <li>Proactively bring issues and problems to the attention of the team; generate, propose, and implement innovative solutions to solve them.</li>
+        </ul>
       <br />
-      <h3>Qualifications Required</h3>
-      <p></p>
+      <h3>About You</h3>
+      <ul>
+      <li>Bachelor’s Degree in Computer Science / IT (Focus on software development) </li>
+      <li>Passionate about all things software and development. </li>
+      <li>Experience in project management, software development, database design and scripting for web applications. </li>
+      <li>Experience and knowledge of Framework such as Angularjs or Angular</li>
+      <li>Experience with SQL databases. </li>
+      <li>Experience with version control tools such as GIT. </li>
+      <li>Experience with other web development frameworks or languages would be a plus (Java, PHP, Python ect) </li>
+      <li>Knowledge of HTML / CSS/ JavaScript.</li>
+      </ul>
     </div>
     <!-- For Testing Engineer -->
     <div id="Test" class="tabcontent">
