--- a/pages/SkillsJobs.html
+++ b/pages/SkillsJobs.html
@@ -137,15 +137,30 @@ We would be looking for a couple of years of experience, working in a team follo
     <div id="Dev" class="tabcontent">
       <span onclick="this.parentElement.style.display='none'" class="topright"></span>
       <h2></h2>
-      <p></p>
+      <p>Creative Protocol are seeking a  a Dev-Ops Engineer to join our small team at Creative Protocol. You will be responsible for ensuring that our product is available 24/7 and have the ability to manage software deployments through great understanding of how the product is supposed to work. You will be working with both our in team developers and testers, acting on a provided deployment plan in order to release both new features as well as bug fixes that may arise. Overall management of our cloud environment will be key in ensuring that our product and services will remain available at all times. This is an excellent opportunity to be part of a team with a culture of continuous improvement regarding our technologies and practices.</p>
       <br />
-      <h3>Skills Required</h3>
+      <h3>Summary of Responsibilities</h3>
       <ul>
-        <li></li>
+        <li>Maintain AWS cloud infrastructure in optimal configuration </li>
+        <li>Ensuring that our product is available 24/7</li>
+        <li>Implement, monitor and improve security configurations using best practice industry and AWS technologies, tools and processes </li>
+        <li>Minimise risk by ensuring knowledge of systems, procedures and processes are documented </li>
+        <li>Manage your workload to meet agreed time frames. </li>
+        <li>Proactively bring issues and problems to the attention of the team; generate, propose, and implement innovative solutions to solve them.</li>
       </ul>
       <br />
-      <h3>Qualifications Required</h3>
-      <p></p>
+      <h3>About You</h3>
+      <ul>
+      <li>A minimum Bacherlor’s degree in computer science with a focus on software development. Equivalent qualifications from industry bodies and vendors may be equally well regarded</li>
+      <li>3 to 5 years in similar role and any relevant AWS focussed certifications will also be highly regarded.</li>
+      <li>Scripting Skills – JavaScript, Python</li>
+      <li>Multiple OS understanding</li>
+      <li>Good understanding of container management</li>
+      <li>Orchestration System – Kubernetes, Git</li>
+      <li>Experience with Java, Docker, Kafka, SQL </li>
+      <li>Knowledge of web, security, and networking protocols</li>
+      <li>An attitude that favours continuous improvement</li>
+      </ul>
     </div>
     <p class="title" style="margin-top: 15px; margin-bottom: 15px;"><b>Team 18 - Creative Protocol&#169 2020</b></p>
     <script>
