--- a/pages/SkillsJobs.html
+++ b/pages/SkillsJobs.html
@@ -38,7 +38,19 @@ We would be looking for a couple of years of experience, working in a team follo
       <h3>Test Engineer</h3>
       <p>In order to ensure that the product is successful, a test engineer will ensure that the product actually works.  They will be able to develop automated test scenarios to ensure that as changes are made they can be tested against standard use cases, giving piece of mind that something else has not been broken somewhere along the line.  They will be able to test the API's built by the back end developer ensuring that they return appropriate results so the Front  end developer can focus on the front end know his/her source data is correct. </p>
       <h3>Dev-Ops Engineer</h3>
-      <p><!-- Insert text here, two <br /> between paragraphs (not after </p>) --></p>
+      <p>A Back end developer would work on the actual server side software, including the design of a database to store user information.  They would also look after the communication with the client devices and logging the RRD information on the central server.  They would build an API that the front end developer would utilise in order to retrieve information for display.  They would require previous experience developing REST based API's and have a good understanding of secure web communication protocols 
+
+ 
+
+Technical skills required would be along the lines of: 
+
+ 
+
+Database Design, probably in something like MySQL. (Our project probably wouldn't require the more big data focused database engines such as Mongo or Big Query) 
+
+ 
+
+Server application development, probably in something like nodeJS to go along with a modern web application approach using Angular as a front end. </p>
     </div>
     <div class="title">
       <h2>Job Advertisements</h2>
@@ -83,7 +95,7 @@ We would be looking for a couple of years of experience, working in a team follo
     <!-- For Back End -->
     <div id="Back" class="tabcontent">
       <span onclick="this.parentElement.style.display='none'" class="topright"></span>
-      <h2>Creative Protocol are seeking a Back End Application Developer that has the ability to understand the software development life cycle and leverage a variety of technologies to produce quality software. The role primarily revolves around looking after the communications between the client’s devices and logging the RRD information on the central server. You will also require the ability to to build an API that our Front End Developer can utilise in order to retrieve information for the display. Previous experience in developing REST based API’s with a good understanding of secure web communication protocols will be highly considered. We strive to create an amazing user experience so we place a strong emphasis on our design process. You will be given the opportunity to work with with our team internally and also be responsible for external clients on software design challenges. This is an excellent opportunity to be part of a team with a culture of continuous improvement regarding our technologies and practices.</h2>
+      <p>Creative Protocol are seeking a Back End Application Developer that has the ability to understand the software development life cycle and leverage a variety of technologies to produce quality software. The role primarily revolves around looking after the communications between the client’s devices and logging the RRD information on the central server. You will also require the ability to to build an API that our Front End Developer can utilise in order to retrieve information for the display. Previous experience in developing REST based API’s with a good understanding of secure web communication protocols will be highly considered. We strive to create an amazing user experience so we place a strong emphasis on our design process. You will be given the opportunity to work with with our team internally and also be responsible for external clients on software design challenges. This is an excellent opportunity to be part of a team with a culture of continuous improvement regarding our technologies and practices.</p>
       <p></p>
       <br />
       <h3>Summary of Responsibilities</h3>
