--- a/pages/SkillsJobs.html
+++ b/pages/SkillsJobs.html
@@ -34,7 +34,11 @@
 Technical skills required would be typical web design languages such as HTML5, PHP and JavaScript. Though we would be probably want to look at getting someone with some experience in a modern web framework such as AngluarJs or Angular. 
 We would be looking for a couple of years of experience, working in a team following a consisted development methodology such as Scrum or Agile.  (Note we would probably want to keep the methodology experience consistent across all role candidates)</p>
       <h3>Back End Application Developer</h3>
-      <p><!-- Insert text here, two <br /> between paragraphs (not after </p>) --></p>
+      <p>A Dev-Ops engineer is role that will definitely be required to ensure that the product is available 24/7.  Any cloud based product requires someone who is responsible for managing software deployments who understands how the product is supposed to work.  They work with both the developers and testers, effectively acting on a provided deployment plan in order to release both new features and bug fixes and are overall responsible for managing the cloud environment. 
+
+ 
+
+We would require someone with experience with cloud environments such as AWS, Microsoft Azure or Google Cloud Platform.  Additionally, in alignment with attempting to ensure that we are using modern technology, they would need experience with managing containers and an orchestration system such as Kubernetes. </p>
       <h3>Test Engineer</h3>
       <p>In order to ensure that the product is successful, a test engineer will ensure that the product actually works.  They will be able to develop automated test scenarios to ensure that as changes are made they can be tested against standard use cases, giving piece of mind that something else has not been broken somewhere along the line.  They will be able to test the API's built by the back end developer ensuring that they return appropriate results so the Front  end developer can focus on the front end know his/her source data is correct. </p>
       <h3>Dev-Ops Engineer</h3>
