--- a/pages/ProjectDescription.html
+++ b/pages/ProjectDescription.html
@@ -92,7 +92,6 @@ The monitoring system we are suggesting will provide an affordable solution for 
       <div class="title">
         <h2>Aims</h2>
       </div>
-      <div class="box">
         <p>The aim of this project will be to produce multiple client devices that record environment variables at regular intervals and communicate these to a cloud based service, with a web based dashboard to review this information.  We will use Raspberry Pi's as our client devices and IaaS provider such as Amazon Web Service to host cloud the cloud infrastructure required. 
 
 This project can be broken up into several smaller aims, which are listed in approximate order. </p>
@@ -146,7 +145,8 @@ This project can be broken up into several smaller aims, which are listed in app
         <br />
         <p><b>Testing</b>
         <br />
-	
+	Currently, we have a functional mock-up of a client device that is able to log temperature results gathered from a functional aquaponics system, which is then able to be accessed from a developer dashboard. The existing client device and dashboard will be tested and refined over the span of the next two weeks, during which the server environment will begin development of secure communication methods and database structures. Following this testing, there are several weeks which will focus on additional server development and replication of the Pi Client device. 
+	Once the server application has been deployed to the cloud server, multiple Pi clients are able to be configured to interface with the server application. Once this has been completed we are able to perform full scope testing and further client testing. The desired outcome is that multiple clients are able to log and retrieve their data, with the data reflecting correct temperature results. As the release client device will only feature temperature readings, the initial test group can be aquarium owners and aquatic enthusiasts.
         </p>
         <br />
       </div>
