--- a/pages/SkillsJobs.html
+++ b/pages/SkillsJobs.html
@@ -35,25 +35,13 @@ Technical skills required would be typical web design languages such as HTML5, P
 We would be looking for a couple of years of experience, working in a team following a consisted development methodology such as Scrum or Agile.  (Note we would probably want to keep the methodology experience consistent across all role candidates)</p>
       <h3>Back End Application Developer</h3>
       <p>A Dev-Ops engineer is role that will definitely be required to ensure that the product is available 24/7.  Any cloud based product requires someone who is responsible for managing software deployments who understands how the product is supposed to work.  They work with both the developers and testers, effectively acting on a provided deployment plan in order to release both new features and bug fixes and are overall responsible for managing the cloud environment. 
-
- 
-
 We would require someone with experience with cloud environments such as AWS, Microsoft Azure or Google Cloud Platform.  Additionally, in alignment with attempting to ensure that we are using modern technology, they would need experience with managing containers and an orchestration system such as Kubernetes. </p>
       <h3>Test Engineer</h3>
       <p>In order to ensure that the product is successful, a test engineer will ensure that the product actually works.  They will be able to develop automated test scenarios to ensure that as changes are made they can be tested against standard use cases, giving piece of mind that something else has not been broken somewhere along the line.  They will be able to test the API's built by the back end developer ensuring that they return appropriate results so the Front  end developer can focus on the front end know his/her source data is correct. </p>
       <h3>Dev-Ops Engineer</h3>
       <p>A Back end developer would work on the actual server side software, including the design of a database to store user information.  They would also look after the communication with the client devices and logging the RRD information on the central server.  They would build an API that the front end developer would utilise in order to retrieve information for display.  They would require previous experience developing REST based API's and have a good understanding of secure web communication protocols 
-
- 
-
 Technical skills required would be along the lines of: 
-
- 
-
 Database Design, probably in something like MySQL. (Our project probably wouldn't require the more big data focused database engines such as Mongo or Big Query) 
-
- 
-
 Server application development, probably in something like nodeJS to go along with a modern web application approach using Angular as a front end. </p>
     </div>
     <div class="title">
@@ -95,6 +83,15 @@ Server application development, probably in something like nodeJS to go along wi
         <li>Effective at user story interpretation and converting requirements into relevant and specific test cases </li>
         <li>Excellent technical, written, and verbal interpersonal communication skills, with a positive attitude and enthusiasm for continuous improvement </li>
         </ul>
+      <h3>What's on offer?</h3>
+      <li>Work in an innovative, design-driven environment.</li>
+      <li>Join a company that values your personal and professional development by providing future growth and development.</li>
+      <h3>How to apply</h3>
+      <p>Please submit your resume and cover letter via email to jobs@creativeprotocol.com.au 
+
+Only persons with unlimited rights to work in Australia need apply. 
+
+        We are an equal opportunity employer.</p>
     </div>
     <!-- For Back End -->
     <div id="Back" class="tabcontent">
@@ -125,6 +122,15 @@ Server application development, probably in something like nodeJS to go along wi
       <li>Experience with other web development frameworks or languages would be a plus (Java, PHP, Python ect) </li>
       <li>Knowledge of HTML / CSS/ JavaScript.</li>
       </ul>
+      <h3>What's on offer?</h3>
+      <li>Work in an innovative, design-driven environment.</li>
+      <li>Join a company that values your personal and professional development by providing future growth and development.</li>
+      <h3>How to apply</h3>
+      <p>Please submit your resume and cover letter via email to jobs@creativeprotocol.com.au 
+
+Only persons with unlimited rights to work in Australia need apply. 
+
+        We are an equal opportunity employer.</p>
     </div>
     <!-- For Testing Engineer -->
     <div id="Test" class="tabcontent">
@@ -148,6 +154,15 @@ Server application development, probably in something like nodeJS to go along wi
         <li>Proactive analysis, design and execution of effective test suites within the context of the sprint, includes manual and automation testing</li>
         <li>Testing front and back end systems using a combination of web services, test harnesses and custom test tools</li>
         <li>Strong exploratory and scenario testing</li>
+        <h3>What's on offer?</h3>
+      <li>Work in an innovative, design-driven environment.</li>
+      <li>Join a company that values your personal and professional development by providing future growth and development.</li>
+      <h3>How to apply</h3>
+      <p>Please submit your resume and cover letter via email to jobs@creativeprotocol.com.au 
+
+Only persons with unlimited rights to work in Australia need apply. 
+
+        We are an equal opportunity employer.</p>
     </div>
     <!-- For Dev Ops -->
     <div id="Dev" class="tabcontent">
@@ -177,6 +192,15 @@ Server application development, probably in something like nodeJS to go along wi
       <li>Knowledge of web, security, and networking protocols</li>
       <li>An attitude that favours continuous improvement</li>
       </ul>
+      <h3>What's on offer?</h3>
+      <li>Work in an innovative, design-driven environment.</li>
+      <li>Join a company that values your personal and professional development by providing future growth and development.</li>
+      <h3>How to apply</h3>
+      <p>Please submit your resume and cover letter via email to jobs@creativeprotocol.com.au 
+
+Only persons with unlimited rights to work in Australia need apply. 
+
+        We are an equal opportunity employer.</p>
     </div>
     <p class="title" style="margin-top: 15px; margin-bottom: 15px;"><b>Team 18 - Creative Protocol&#169 2020</b></p>
     <script>
