--- a/pages/ProjectDescription.html
+++ b/pages/ProjectDescription.html
@@ -149,6 +149,13 @@ This project can be broken up into several smaller aims, which are listed in app
 	Once the server application has been deployed to the cloud server, multiple Pi clients are able to be configured to interface with the server application. Once this has been completed we are able to perform full scope testing and further client testing. The desired outcome is that multiple clients are able to log and retrieve their data, with the data reflecting correct temperature results. As the release client device will only feature temperature readings, the initial test group can be aquarium owners and aquatic enthusiasts.
         </p>
         <br />
+	<p><b>Risks</b>
+	<br />
+	With the commencement of any project comes the possibility that many things could go wrong, however with the proper risk management processes these risks can be mitigated, with the intention of removing them completely. <br />
+	Our project includes electronics interfacing with a water source, setting us with the task of ensuring a reliable product while also having a minimalistic design. There are a couple of components that are submerged in water with the potential of 99% of that components lifespan being spent submerged in water. <br />
+	As our project will rely on cloud computing a lot of planning will need to go into the implementation of the cloud service. For the initial deployment project we will be looking into IaaS to provide the cloud infrastructure as it would be cost effective and provide more reliability than what could be designed in the outlined timeframe. However the toolsets would need to be learned and understood, with the ability for ongoing support and possible migration to an internally hosted cloud service. It is early in the project to completely mitigate the risks involved in the cloud functionality, however as the project continues to develop it is vital that it is considered in each major step.<br />
+	A major risk present within our project is a disruption of service. This is a potential risk due to the fact all data is sent to the central server to be processed and logged. If this data is not received by the server, or logged correctly, the end user could face issues with loss of data and potentially having their aquaponics system fail from not receiving a vital notification. To combat this, a custom communications server will be built which will allow for customisable redundancy methods
+	<br />
       </div>
       <div class="title">
         <h2>Final Project Pitch</h2>
