--- a/pages/GroupRef.html
+++ b/pages/GroupRef.html
@@ -109,7 +109,7 @@
             
             <h3>Matthew McCracken</h3>
             <p><b>What Went Well:</b>   
-               Having done very well on assignment 2 I feel our group was a lot more ease at the process of the group assignment. I feel there were a lot less unnecessary meetings, most were more comfortable and understood how each member of the group worked. 
+               Having done very well on assignment 2 I feel our group was a lot more at ease with the process of the group assignment. I feel there were a lot less unnecessary meetings, most were more comfortable and understood how each member of the group worked. 
                 <br>
                 <br>
                 <b>What Could Be Improved:</b><br>
