--- a/pages/SkillsJobs.html
+++ b/pages/SkillsJobs.html
@@ -189,7 +189,7 @@ Only persons with unlimited rights to work in Australia need apply.
       <br />
       <h3>About You</h3>
       <ul>
-      <li>A minimum Bacherlor’s degree in computer science with a focus on software development. Equivalent qualifications from industry bodies and vendors may be equally well regarded</li>
+      <li>A minimum Bachelor’s degree in computer science with a focus on software development. Equivalent qualifications from industry bodies and vendors may be equally well regarded</li>
       <li>3 to 5 years in similar role and any relevant AWS focussed certifications will also be highly regarded.</li>
       <li>Scripting Skills – JavaScript, Python</li>
       <li>Multiple OS understanding</li>
