--- a/pages/ProjectDescription.html
+++ b/pages/ProjectDescription.html
@@ -96,6 +96,7 @@ The monitoring system we are suggesting will provide an affordable solution for 
       <div class="title">
         <h2>Aims</h2>
       </div>
+	 <div class="box">
         <p>The aim of this project will be to produce multiple client devices that record environment variables at regular intervals and communicate these to a cloud based service, with a web based dashboard to review this information.  We will use Raspberry Pi's as our client devices and IaaS provider such as Amazon Web Service to host cloud the cloud infrastructure required. 
 
 This project can be broken up into several smaller aims, which are listed in approximate order. </p>
