--- a/pages/GroupRef.html
+++ b/pages/GroupRef.html
@@ -35,18 +35,21 @@
             <p><b>What Went Well:</b><br>
             
                 <br>
+                I  believe that we went far beyond what was actually required for Assignment 2, so we already had most of the groundwork for Assignment 3 done.  Majority of this assignment was just clarifying details and putting things down to an actual 'project plan' 
                 <br>
                 <b>What Could Be Improved:</b><br>
-
                 <br>
+                Whether it could be improved or not but during this assignment we found that our different circumstances meant that it was almost impossible to meet as a group in entirety.
                 <br>
                 <b>What Was Surprising:</b><br>
 
                 <br>
+                No matter the difference in circumstances, each team member did everything they  could to contribute. Some members had work commitments take them out of communication range, while others were just too busy with work. Even with these hurdles everyone contributed to their best abilit
                 <br>
                 <b>What Have You Learnt About Groups:</b><br>
 
                 <br>
+                The biggest thing I have learnt about groups during this assignment is to be accepting of others circumstances. Studying remotely is a unique scenario where everyone is at a different stage of life and has different prior commitments
                 <br>
             </p>
             
