--- a/pages/GroupRef.html
+++ b/pages/GroupRef.html
@@ -59,19 +59,19 @@
             
             <h3>Shane Bunting</h3>
             <p><b>What Went Well:</b>  <br>
-
+                The flow from assignment 2 into assignment 3 was rather easy having completed more than required previously. The other team members stepped up as they did in the last one and tackled a huge portion of the work load. 
                 <br>
                 <br>
                 <b>What Could Be Improved:</b><br>
-
+                Reading the finer details of the assignment itself to pick up little bits and pieces that were missed originally.  
                 <br>
                 <br>
                 <b>What Was Surprising:</b><br>
-
+                Just how little there was to add on but also just how much there was to add on from assignment 2. There were a lot of things that stayed the same but took a different angle/approach this time around. 
                 <br>
                 <br>
                 <b>What Have You Learnt About Groups:</b><br>
-
+                That life will always get in the way no matter how much you plan and try and organise. In saying that with the different time zones certain members had, continued work hours and even adventures away things managed to get done as there were people who stepped up and took control of the situations.  
                 <br>
                 <br>
             </p>
