--- a/pages/GroupRef.html
+++ b/pages/GroupRef.html
@@ -135,15 +135,16 @@
             
             <h3>Cameron McLaughlan</h3>
             <p><b>What Went Well:</b>  <br>
-
+                The website and PDF file was done on time, the IT areas were written quite well in my opinion, and I believe that the other sections are also up to a high standard, there was communication with the team members and we were all active when it came to discussion in the team meetings. Scheduling future meetings while in a meeting was also great, people could discuss what time suited them best and we can change the meeting time if needed.
                 <br><br>
                 <b>What Could Be Improved:</b><br>
-
+                For myself I would improve my time management skills, as I didn’t finalise my IT area section as early as I could of, meaning I may not have contributed to other parts of the project as much as I could of.
                 <br><br>
                 <b>What Was Surprising:</b> <br>
-
+                I was surprised by the group's ability to continually work and organise. The group didn’t seem to have any issues or conflicts and everyone was able to voice their own opinion on certain areas of the work.
                 <br><br>
                 <b>What Have You Learnt About Groups:</b><br>
+                One thing I have learnt about groups is that it is important to be flexible and understanding of everyone in the group.
             </p>
         </div>
         
