--- a/pages/GroupRef.html
+++ b/pages/GroupRef.html
@@ -78,19 +78,19 @@
             
             <h3>Jessica Delgado</h3>
             <p><b>What Went Well:</b> <br>
-
+                From working with the team on the previous assignment, our previous strengths on communication of set roles early allowed for us to work independently on items and flowing said items into a final project. All communication in our meetings was clear and documented well with meeting minutes being taken and shared for each meeting. There was also continual communication through the use of Microsoft Teams and Discord IM’s, advising team members of changes and upcoming deadlines. Our team was able to communicate openly with members taking on feedback positively. I am quite positive with how my team has been able to work together
                 <br>
                 <br>
                 <b>What Could Be Improved:</b><br>
-
+                While we had most of the project already defined from the previous assignment, there was often times of doubt with what needed to be done next. We were able to affectively sort out the next steps and coordinate it as a team. A few last minute changes from the team could be better communicated earlier.
                 <br>
                 <br>
                 <b>What Was Surprising:</b> <br>
-
+                The most surprising part of working with this team is how we were able to agree on most aspects of the project, the team was able to communicate all feedback productively and all feedback was taken on with considerable thought. Any issues that arose was quickly dealt with which was assisting our team in time management.
                 <br>
                 <br>
                 <b>What Have You Learnt About Groups:</b><br>
-
+                Real life events will often get in the way of teams being able to communicate or meet up regularly. Often times I have known groups of people to not take real life events into consideration, however this team has been very open and understanding especially considering the current world events and other unforeseen circumstances
                 <br>
                 <br>
             </p>
